@@ -1,6 +1,6 @@
 <config>
         <settings>
-                <height>54</height>
+                <height>60</height>
                 <hposition>center</hposition>
                 <vposition>bottom</vposition>
                 <ontop>False</ontop>
@@ -11,6 +11,9 @@
         <plugins>
             <plugin name="quickterminal" />
             <plugin name="flexible_space" />
+           	<plugin name="cpuload">
+           		<vlabel>True</vlabel>
+           	</plugin>
             <plugin name="meminfo">
             	<vlabel>True</vlabel>
             </plugin>
@@ -22,7 +25,7 @@
             	<player>quodlibet</player>
             </plugin>
             <plugin name="pager" />
-        <plugin name="separator" />
+        	<plugin name="separator" />
         	<plugin name="clock" />
-        	</plugins>
+		</plugins>
 </config>
